affaire pdf is ready to print